# agent_system_assignment

./: .gitignore
choreonoid_ros_tutorial/: CMakeLists.txt  package.xml
choreonoid_ros_tutorial/project/: ros_tank_tutorial.cnoid
choreonoid_ros_tutorial/src/: rtt_tank_controller.cpp
vnoid_challenge/: CMakeLists.txt  package.xml
vnoid_challenge/config/: athletics.yaml
vnoid_challenge/include/vnoid_challenge/: balance_controller.hpp
vnoid_challenge/launch/: athletics.launch.py
vnoid_challenge/model/: InvertedPendulum.body  field2023_athletics.urdf
vnoid_challenge/project/: athletics.cnoid  shorttrack.cnoid
vnoid_challenge/scripts/: go2_env.py  go2_eval.py  go2_train.py
vnoid_challenge/src/: Go2Controller.cpp  balance_controller.cpp  inverted_pendulum_controller.cpp
