<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>choreonoid_ros_tutorial</name>
  <version>0.1.0</version>
  <description>Tutorial on how to implement a robot controller with I/O using ROS</description>
  <maintainer email="mitukou1109@g.ecc.u-tokyo.ac.jp">Mitsuhiro Sakamoto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>choreonoid</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
